# RAG_QA

./: .gitignore  README.md  api_keys.py  app.py  main.py  pyproject.toml  requirements.txt
answer_generation/: answer_generation.py  answer_generation_v2.py  answer_generation_v3.py  readme.md
chunk/: chunk.py  chunk_v2.py
clean_normalize/: clean_normalize.py
embedding/: faiss_embedder.py
ingestion/: hashing.py  pdf_ingestion.py  readme.md  reload.py  state.py  vision_interpretation.py
ingestion_v2/: base.py  hashing.py  pdf_ingestion.py  readme.md  reload.py
ingestion_v2/extractors/: images.py  native_tables.py  native_text.py  ocr_tables.py  ocr_text.py  vision_caption.py  vision_router.py
patch/: system_startup_cleaner.py
pipeline_incremental/: pipeline_incremental.py
query/: query_pipeline.py  query_pipeline_v2.py  query_pipeline_v3.py
retrieval/: retrieval_pipeline.py
schema/: ingestion_schema.py
storage/: content_units.faiss  content_units.jsonl  content_units_cleaned.jsonl  content_units_cleaned_chunked.jsonl  content_units_dummy.jsonl  content_units_dummy_cleaned.jsonl  documents.jsonl  final_answers.json  final_answers_v1.json  pipeline_state.json  query_memory.json  retrieval_results copy.jsonl  retrieval_results.jsonl  sources.jsonl
test/: answer_with_citations.py  export_ingestion_result_to_pdf.py  faiss_inspect.py  overlap_saturation.py  recall_at_k.py  test_answer_generation.py  test_chunking.py  test_clean_content.py  test_faiss.py  test_full_pipeline.py  test_pdf_ingestion.py  test_query_pipeline.py  test_retrieval_pipeline.py  validate_query_retrieval.py  verify_embeddings.py
