[project]
name = "RAG-QA"
version = "1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pdfplumber>=0.10.0",
    "pillow>=10.0.0",
    "pydantic>=2.5",
    "pymupdf>=1.23.0",
    "pytesseract>=0.3.10",
    "regex==2023.12.25",
    "requests==2.31.0",
    "tqdm==4.66.1",
    "typing-extensions>=4.8.0",
]
